Fix (custom scrollbars) cursor pointer not working on scrollbar thumb

--- a/src/framework/theme/styles/core/_mixins.scss
+++ b/src/framework/theme/styles/core/_mixins.scss
@@ -12,8 +12,11 @@
 
   &::-webkit-scrollbar-thumb {
     background: $fg;
-    cursor: pointer;
     border-radius: $border-radius;
+
+    &:hover {
+      cursor: pointer;
+    }
   }
 
   &::-webkit-scrollbar-track {
